<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2d2e35"
    tools:context=".question.QuestionCreatedActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/created_q_done_message"
        android:gravity="center_vertical"
        android:textColor="@color/colorWhite"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:background="@drawable/corner_shape">

        <TextView
            android:id="@+id/tv_created_q_send_it"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/created_q_send_it_to_friend"/>

        <TextView
            android:id="@+id/tv_created_q_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/created_q_questionnaire_id_c"
            app:layout_constraintTop_toBottomOf="@id/tv_created_q_send_it"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/tv_created_q_id"
            app:layout_constraintBottom_toTopOf="@id/created_send_later">
            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/created_q_copy_link" />
            <Button
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:text="@string/common_share" />
        </LinearLayout>

        <Button
            android:id="@+id/created_send_later"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/created_q_later"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>