<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/second_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="28dp"
        android:textColor="#2d2e35"
        android:textSize="15sp" />

    <ImageButton
        android:id="@+id/btn_j"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="57dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/custom_question_img"
        android:textColor="#ffffff"
        android:src="@drawable/text_style_1210"
        android:scaleType="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:contentDescription="@string/StringValue" />

    <TextView
        android:id="@+id/txt_j"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="27dp"
        android:text="@string/txt_j"
        android:textSize="13sp" />

    <ImageButton
        android:id="@+id/btn_g"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="57dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/custom_question_img"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:src="@drawable/list_1497"
        android:scaleType="center"
        android:textStyle="bold"
        android:contentDescription="@string/StringValue" />

    <TextView
        android:id="@+id/txt_g"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="163dp"
        android:text="@string/txt_g"
        android:layout_marginTop="160dp"
        android:layout_marginBottom="27dp"
        android:textSize="13sp" />

    <ImageButton
        android:id="@+id/btn_o"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginStart="242dp"
        android:layout_marginTop="57dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/custom_question_blue"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:scaleType="center"
        android:src="@drawable/plus_circle_1425"
        android:textStyle="bold"
        android:contentDescription="@string/StringValue" />

    <TextView
        android:id="@+id/txt_o"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="276dp"
        android:layout_marginTop="160dp"
        android:text="@string/txt_o"
        android:layout_marginBottom="27dp"
        android:textSize="13sp" />


</RelativeLayout>